--- a/Payment.html
+++ b/Payment.html
@@ -71,7 +71,6 @@
         <button id="saveInfo" class="bg-purple-700 text-white py-2 px-4 w-full rounded text-lg font-semibold mt-4">
             Save Information
         </button>
-        <p class="text-gray-500 text-sm mt-2">You can also fill in your details directly in the payment section by clicking the black payment button.</p>
 
         <!-- ✅ عرض بيانات الطلب بعد الحفظ -->
         <div id="order-summary" class="hidden bg-gray-100 p-4 rounded-lg mt-4">
@@ -128,14 +127,22 @@
                     }
                 }
 
+                document.getElementById("customer-form").classList.add("hidden");
                 document.getElementById("order-summary").classList.remove("hidden");
                 document.getElementById("paypal-button-container").classList.remove("hidden");
 
-                document.getElementById("summary-name").textContent = document.getElementById("firstName").value + " " + document.getElementById("lastName").value;
-                document.getElementById("summary-country").textContent = document.getElementById("country").value;
                 document.getElementById("summary-total").textContent = document.getElementById("total-price").textContent;
+                document.getElementById("summary-shipping").textContent = shippingCost;
 
-                paypal.Buttons().render("#paypal-button-container");
+                paypal.Buttons({
+                    createOrder: function (data, actions) {
+                        return actions.order.create({
+                            purchase_units: [{
+                                amount: { value: document.getElementById("total-price").textContent }
+                            }]
+                        });
+                    }
+                }).render("#paypal-button-container");
             });
 
             updateTotal();
