--- a/Payment.html
+++ b/Payment.html
@@ -119,8 +119,8 @@
             });
 
             document.getElementById("saveInfo").addEventListener("click", function () {
-                let requiredFields = ["firstName", "lastName", "city", "address", "postalCode", "phone"];
-                for (let field of requiredFields) {
+                let fields = ["firstName", "lastName", "city", "address", "postalCode", "phone"];
+                for (let field of fields) {
                     if (!document.getElementById(field).value.trim()) {
                         alert("❌ Please fill in all required fields.");
                         return;
@@ -131,18 +131,16 @@
                 document.getElementById("order-summary").classList.remove("hidden");
                 document.getElementById("paypal-button-container").classList.remove("hidden");
 
-                document.getElementById("summary-total").textContent = document.getElementById("total-price").textContent;
+                document.getElementById("summary-name").textContent = document.getElementById("firstName").value + " " + document.getElementById("lastName").value;
+                document.getElementById("summary-country").textContent = document.getElementById("country").value;
+                document.getElementById("summary-city").textContent = document.getElementById("city").value;
+                document.getElementById("summary-address").textContent = document.getElementById("address").value;
+                document.getElementById("summary-postalCode").textContent = document.getElementById("postalCode").value;
+                document.getElementById("summary-phone").textContent = document.getElementById("phone").value;
                 document.getElementById("summary-shipping").textContent = shippingCost;
+                document.getElementById("summary-total").textContent = document.getElementById("total-price").textContent;
 
-                paypal.Buttons({
-                    createOrder: function (data, actions) {
-                        return actions.order.create({
-                            purchase_units: [{
-                                amount: { value: document.getElementById("total-price").textContent }
-                            }]
-                        });
-                    }
-                }).render("#paypal-button-container");
+                paypal.Buttons({ createOrder: (data, actions) => actions.order.create({ purchase_units: [{ amount: { value: document.getElementById("total-price").textContent } }] }) }).render("#paypal-button-container");
             });
 
             updateTotal();
