--- a/Payment.html
+++ b/Payment.html
@@ -90,6 +90,7 @@
 
     </div>
 
+    <!-- ✅ سكربت جافاسكريبت -->
     <script>
     document.addEventListener("DOMContentLoaded", function () {
         let pricePerItem = 20.00;
@@ -99,6 +100,14 @@
         function updateTotal() {
             let total = (pricePerItem * quantity) + parseFloat(shippingCost);
             document.getElementById("total-price").textContent = total.toFixed(2);
+        }
+
+        function updatePhoneCode() {
+            let countrySelect = document.getElementById("country");
+            let phoneCodeSpan = document.getElementById("phone-code");
+            let selectedOption = countrySelect.options[countrySelect.selectedIndex];
+            let phoneCode = selectedOption.getAttribute("data-code");
+            phoneCodeSpan.textContent = phoneCode;
         }
 
         document.getElementById("increase").addEventListener("click", function () {
@@ -118,14 +127,6 @@
             updateTotal();
         });
 
-        function updatePhoneCode() {
-            let countrySelect = document.getElementById("country");
-            let phoneCodeSpan = document.getElementById("phone-code");
-            let selectedOption = countrySelect.options[countrySelect.selectedIndex];
-            let phoneCode = selectedOption.getAttribute("data-code");
-            phoneCodeSpan.textContent = phoneCode;
-        }
-
         document.getElementById("country").addEventListener("change", updatePhoneCode);
 
         document.getElementById("saveInfo").addEventListener("click", function () {
@@ -141,15 +142,6 @@
             document.getElementById("order-summary").classList.remove("hidden");
             document.getElementById("paypal-button-container").classList.remove("hidden");
 
-            document.getElementById("summary-name").textContent = document.getElementById("firstName").value + " " + document.getElementById("lastName").value;
-            document.getElementById("summary-country").textContent = document.getElementById("country").value;
-            document.getElementById("summary-city").textContent = document.getElementById("city").value;
-            document.getElementById("summary-address").textContent = document.getElementById("address").value;
-            document.getElementById("summary-postalCode").textContent = document.getElementById("postalCode").value;
-            document.getElementById("summary-phone").textContent = document.getElementById("phone-code").textContent + " " + document.getElementById("phone").value;
-            document.getElementById("summary-shipping").textContent = shippingCost;
-            document.getElementById("summary-total").textContent = document.getElementById("total-price").textContent;
-
             paypal.Buttons({ 
                 createOrder: (data, actions) => actions.order.create({ 
                     purchase_units: [{ amount: { value: document.getElementById("total-price").textContent } }] 
@@ -158,8 +150,9 @@
         });
 
         updateTotal();
-        updatePhoneCode(); // استدعاء الدالة لتحديث الرمز عند تحميل الصفحة
+        updatePhoneCode();
     });
-</script>
+    </script>
+
 </body>
 </html>
