--- a/Payment.html
+++ b/Payment.html
@@ -24,10 +24,10 @@
         <!-- ✅ زر التحكم في الكمية -->
         <div class="flex justify-between items-center mb-4">
             <p class="text-lg font-semibold">Total: $<span id="total-price">20.00</span></p>
-            <div class="flex bg-white rounded-lg border shadow-sm">
-                <button id="decrease" class="bg-gray-200 text-gray-700 px-3 py-1 rounded-l">-</button>
-                <span id="quantity" class="px-4 text-lg font-bold bg-white text-black">1</span>
-                <button id="increase" class="bg-gray-200 text-gray-700 px-3 py-1 rounded-r">+</button>
+            <div class="flex">
+                <button id="decrease" class="bg-white text-black px-3 py-1 border rounded-l">-</button>
+                <span id="quantity" class="px-4 text-lg font-bold">1</span>
+                <button id="increase" class="bg-white text-black px-3 py-1 border rounded-r">+</button>
             </div>
         </div>
 
@@ -101,24 +101,36 @@
             document.getElementById("total-price").textContent = total.toFixed(2);
         }
 
+        document.getElementById("increase").addEventListener("click", function () {
+            quantity++;
+            document.getElementById("quantity").textContent = quantity;
+            updateTotal();
+        });
+
+        document.getElementById("decrease").addEventListener("click", function () {
+            if (quantity > 1) {
+                quantity--;
+                document.getElementById("quantity").textContent = quantity;
+                updateTotal();
+            }
+        });
+
+        document.getElementById("shipping").addEventListener("change", function () {
+            shippingCost = this.value;
+            updateTotal();
+        });
+
         function updatePhoneCode() {
-            let selected = document.getElementById("country").selectedOptions[0];
-            document.getElementById("phone-code").textContent = selected.getAttribute("data-code");
+            let selectedOption = document.getElementById("country").options[document.getElementById("country").selectedIndex];
+            document.getElementById("phone-code").textContent = selectedOption.getAttribute("data-code");
         }
 
         document.getElementById("saveInfo").addEventListener("click", function () {
-            let fields = ["firstName", "lastName", "city", "address", "postalCode", "phone"];
-            for (let field of fields) {
-                if (!document.getElementById(field).value.trim()) {
-                    alert("❌ Please fill in all required fields.");
-                    return;
-                }
-            }
-
             document.getElementById("customer-form").classList.add("hidden");
             document.getElementById("order-summary").classList.remove("hidden");
             document.getElementById("paypal-button-container").classList.remove("hidden");
 
+            document.getElementById("summary-total").textContent = document.getElementById("total-price").textContent;
             paypal.Buttons({ 
                 createOrder: (data, actions) => actions.order.create({ 
                     purchase_units: [{ amount: { value: document.getElementById("total-price").textContent } }] 
@@ -127,7 +139,6 @@
         });
 
         updateTotal();
-        updatePhoneCode();
     });
 </script>
 </body>
