--- a/Payment.html
+++ b/Payment.html
@@ -101,36 +101,30 @@
             document.getElementById("total-price").textContent = total.toFixed(2);
         }
 
-        document.getElementById("increase").addEventListener("click", function () {
-            quantity++;
-            document.getElementById("quantity").textContent = quantity;
-            updateTotal();
-        });
-
-        document.getElementById("decrease").addEventListener("click", function () {
-            if (quantity > 1) {
-                quantity--;
-                document.getElementById("quantity").textContent = quantity;
-                updateTotal();
-            }
-        });
+        function updatePhoneCode() {
+            let selectedOption = document.getElementById("country").options[document.getElementById("country").selectedIndex];
+            document.getElementById("phone-code").textContent = selectedOption.getAttribute("data-code");
+        }
 
         document.getElementById("shipping").addEventListener("change", function () {
             shippingCost = this.value;
             updateTotal();
         });
 
-        function updatePhoneCode() {
-            let selectedOption = document.getElementById("country").options[document.getElementById("country").selectedIndex];
-            document.getElementById("phone-code").textContent = selectedOption.getAttribute("data-code");
-        }
-
         document.getElementById("saveInfo").addEventListener("click", function () {
             document.getElementById("customer-form").classList.add("hidden");
             document.getElementById("order-summary").classList.remove("hidden");
             document.getElementById("paypal-button-container").classList.remove("hidden");
 
+            document.getElementById("summary-name").textContent = document.getElementById("firstName").value + " " + document.getElementById("lastName").value;
+            document.getElementById("summary-country").textContent = document.getElementById("country").value;
+            document.getElementById("summary-city").textContent = document.getElementById("city").value;
+            document.getElementById("summary-address").textContent = document.getElementById("address").value;
+            document.getElementById("summary-postalCode").textContent = document.getElementById("postalCode").value;
+            document.getElementById("summary-phone").textContent = document.getElementById("phone-code").textContent + " " + document.getElementById("phone").value;
+            document.getElementById("summary-shipping").textContent = shippingCost;
             document.getElementById("summary-total").textContent = document.getElementById("total-price").textContent;
+
             paypal.Buttons({ 
                 createOrder: (data, actions) => actions.order.create({ 
                     purchase_units: [{ amount: { value: document.getElementById("total-price").textContent } }] 
