--- a/Payment.html
+++ b/Payment.html
@@ -40,7 +40,7 @@
                 <input type="text" id="lastName" placeholder="Last Name" class="border border-gray-300 p-2 w-1/2 rounded">
             </div>
 
-            <select id="country" class="border border-gray-300 p-2 w-full rounded mb-2" onchange="updatePhoneCode()">
+            <select id="country" class="border border-gray-300 p-2 w-full rounded mb-2">
                 <option value="US" data-code="+1">🇺🇸 United States</option>
                 <option value="CA" data-code="+1">🇨🇦 Canada</option>
                 <option value="UK" data-code="+44">🇬🇧 United Kingdom</option>
@@ -102,37 +102,35 @@
         }
 
         function updatePhoneCode() {
-            let selectedOption = document.getElementById("country").options[document.getElementById("country").selectedIndex];
-            document.getElementById("phone-code").textContent = selectedOption.getAttribute("data-code");
+            let countrySelect = document.getElementById("country");
+            let phoneCodeSpan = document.getElementById("phone-code");
+            let selectedOption = countrySelect.options[countrySelect.selectedIndex];
+            phoneCodeSpan.textContent = selectedOption.getAttribute("data-code");
         }
+
+        document.getElementById("increase").addEventListener("click", function () {
+            quantity++;
+            document.getElementById("quantity").textContent = quantity;
+            updateTotal();
+        });
+
+        document.getElementById("decrease").addEventListener("click", function () {
+            if (quantity > 1) {
+                quantity--;
+                document.getElementById("quantity").textContent = quantity;
+                updateTotal();
+            }
+        });
 
         document.getElementById("shipping").addEventListener("change", function () {
             shippingCost = this.value;
             updateTotal();
         });
 
-        document.getElementById("saveInfo").addEventListener("click", function () {
-            document.getElementById("customer-form").classList.add("hidden");
-            document.getElementById("order-summary").classList.remove("hidden");
-            document.getElementById("paypal-button-container").classList.remove("hidden");
-
-            document.getElementById("summary-name").textContent = document.getElementById("firstName").value + " " + document.getElementById("lastName").value;
-            document.getElementById("summary-country").textContent = document.getElementById("country").value;
-            document.getElementById("summary-city").textContent = document.getElementById("city").value;
-            document.getElementById("summary-address").textContent = document.getElementById("address").value;
-            document.getElementById("summary-postalCode").textContent = document.getElementById("postalCode").value;
-            document.getElementById("summary-phone").textContent = document.getElementById("phone-code").textContent + " " + document.getElementById("phone").value;
-            document.getElementById("summary-shipping").textContent = shippingCost;
-            document.getElementById("summary-total").textContent = document.getElementById("total-price").textContent;
-
-            paypal.Buttons({ 
-                createOrder: (data, actions) => actions.order.create({ 
-                    purchase_units: [{ amount: { value: document.getElementById("total-price").textContent } }] 
-                }) 
-            }).render("#paypal-button-container");
-        });
+        document.getElementById("country").addEventListener("change", updatePhoneCode);
 
         updateTotal();
+        updatePhoneCode();
     });
 </script>
 </body>
