--- a/Payment.html
+++ b/Payment.html
@@ -137,13 +137,14 @@
                 document.getElementById("order-summary").classList.remove("hidden");
                 document.getElementById("paypal-button-container").classList.remove("hidden");
 
+                document.getElementById("summary-name").textContent = document.getElementById("firstName").value + " " + document.getElementById("lastName").value;
+                document.getElementById("summary-country").textContent = document.getElementById("country").value;
+                document.getElementById("summary-city").textContent = document.getElementById("city").value;
+                document.getElementById("summary-address").textContent = document.getElementById("address").value;
+                document.getElementById("summary-postalCode").textContent = document.getElementById("postalCode").value;
+                document.getElementById("summary-phone").textContent = document.getElementById("phone").value;
+                document.getElementById("summary-shipping").textContent = shippingCost;
                 document.getElementById("summary-total").textContent = document.getElementById("total-price").textContent;
-
-                paypal.Buttons({
-                    createOrder: (data, actions) => actions.order.create({
-                        purchase_units: [{ amount: { value: document.getElementById("total-price").textContent } }]
-                    })
-                }).render("#paypal-button-container");
             });
 
             updateTotal();
