--- a/Lar.html
+++ b/Lar.html
@@ -60,7 +60,7 @@
                 <div class="rating text-lg mt-3">
                     ⭐⭐⭐⭐⭐ <span class="text-gray-600">(4.8/5 from 320 reviews)</span>
                 </div>
-                <button onclick="window.location.href='checkout.html';" 
+                <button onclick="window.location.href='Payment.html';" 
                         class="buy-btn bg-black text-white py-3 px-6 mt-4 rounded-lg hover:bg-gray-800 transition duration-300">
                     Buy Now
                 </button>
