--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <h2 class="text-4xl font-bold">Experience the Future with VELYORA</h2>
         <p class="text-lg mt-4">The most advanced gadget designed to simplify your life.</p>
         <img src="CC58B0F2-7CDC-457C-A15B-2A25B465E82B.png" alt="Smart Gadget" class="mx-auto mt-6 w-64 h-auto">
-        <a href="Lar.html" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold">
+        <a href="Payment.html" class="mt-6 bg-yellow-500 text-black px-6 py-3 rounded text-lg font-bold">
            Buy Now
         </a>
     </section>
